别名管理界面调整

--- a/CustomizeFolderTool/Forms/Alias.xaml
+++ b/CustomizeFolderTool/Forms/Alias.xaml
@@ -5,9 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomizeFolderTool.Forms"
         mc:Ignorable="d"
-        Title="Alias" WindowStyle="None" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Closing="Window_Closing">
-    <Grid Height="44" Width="362">
-        <TextBox x:Name="txtAlias" HorizontalAlignment="Left" Height="24" Margin="10,10,0,0" TextWrapping="Wrap" KeyDown="TextBoxKeyDown" VerticalAlignment="Top" Width="254" VerticalContentAlignment="Center"/>
-        <Button Content="OK" HorizontalAlignment="Left" Margin="269,10,0,0" VerticalAlignment="Top" Width="75" Height="24" Click="ButtonClick"/>
+        Title="别名管理" WindowStyle="ToolWindow" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Closing="Window_Closing">
+    <Grid Height="93" Width="362">
+        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="请输入文件夹别名" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtAlias" HorizontalAlignment="Left" Height="24" Margin="10,30,0,0" TextWrapping="Wrap" KeyDown="TextBoxKeyDown" VerticalAlignment="Top" Width="342" VerticalContentAlignment="Center"/>
+        <Button Content="确定" HorizontalAlignment="Left" Margin="10,59,0,0" VerticalAlignment="Top" Width="90" Height="24" Click="Button1Click"/>
+        <Button Content="取消" Margin="0,59,10,0" VerticalAlignment="Top" Height="24" Click="Button2Click" HorizontalAlignment="Right" Width="90"/>
     </Grid>
 </Window>
