--- a/CustomizeFolderTool/Forms/Color.xaml
+++ b/CustomizeFolderTool/Forms/Color.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomizeFolderTool.Forms"
         mc:Ignorable="d"
-        Title="文件夹图标管理" SizeToContent="WidthAndHeight" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="文件夹图标管理" SizeToContent="WidthAndHeight" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Closing="Window_Closing">
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="OverridesDefaultStyle" Value="True" />
@@ -27,12 +27,11 @@
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="BorderBrush" Value="SkyBlue"></Setter>
-                    <Setter Property="BorderThickness" Value="4"></Setter>
+                    <Setter Property="BorderThickness" Value="3"></Setter>
                 </Trigger>
             </Style.Triggers>
         </Style>
     </Window.Resources>
     <Grid Width="380" Height="232" Loaded="Grid_Loaded">
-        
     </Grid>
 </Window>
